fixing slideshow on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,9 +44,6 @@ a {
 }
 
 .slide > div {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background-size: 65vh;
   background-position: 50% 50%;
   background-repeat: no-repeat;
